ecs-eks-deepdive-lab/k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deepdive
  labels:
    app: deepdive
